--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  background-color: rgb(250, 251, 252);
 }
 
 a {
@@ -17,12 +16,6 @@ a {
   box-sizing: border-box;
 }
 
-.container {
-  height: 191.75rem;
-  margin: auto;
-  backdrop-filter: blur(100px);
-}
-
 .nav ul a {
   margin-left: 2rem;
   outline: none;
@@ -30,19 +23,18 @@ a {
 }
 
 .nav {
-  width: 100%;
+  padding-top: 1rem;
   display: flex;
   align-items: center;
-  margin: 2rem auto;
   justify-content: space-around;
 }
 
 .main1 {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   width: 65%;
-  margin: 2rem auto;
+  margin: 2rem auto 0 auto;
+  padding-bottom: 2rem;
 }
 
 .sub1-main1 {
@@ -61,7 +53,6 @@ a {
 }
 
 .button2 {
-  /* background-color: #1F; */
   display: flex;
   align-items: center;
   border-radius: 8px;
@@ -72,13 +63,26 @@ a {
 
 .p1 {
   margin-top: 1rem;
-  /* font-family: "DM Sans"; */
   font-size: 17px;
-  line-height: 30px;
+  line-height: 25px;
   width: 450px;
   height: 120px;
   margin-bottom: 2rem;
   color: #1f2937;
+}
+
+.p2 {
+  font-size: 17px;
+  line-height: 25px;
+  width: 550px;
+  color: #1f2937;
+}
+
+.container1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(/Images/background2.png)
 }
 
 @tailwind utilities;
