--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,9 +32,10 @@ a {
 .main1 {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 65%;
   margin: 2rem auto 0 auto;
-  padding-bottom: 2rem;
+  padding-bottom: 15rem;
 }
 
 .sub1-main1 {
@@ -80,7 +81,7 @@ a {
 
 .p3 {
   font-family: Manrope;
-  font-size: .97rem;
+  font-size: 0.97rem;
   margin-left: 16px;
 }
 
@@ -89,7 +90,29 @@ a {
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-image: url(/Images/background2.png)
+  background-image: url(/Images/background2.png);
+  padding-bottom: 8rem;
 }
 
+.container2 {
+  padding-top: 5rem;
+  background-image: url(/Images/background3.png);
+  background-size: cover;
+}
+
+.cards {
+  background-color: white;
+  border: 2px solid #e5e7eb;
+  border-radius: 32px;
+  width: 29rem;
+  height: 30rem;
+}
+
+.inner {
+  background-color: #f9f9f9;
+  margin: 1rem auto;
+  border-radius: 32px;
+  width: 26.5rem;
+  height: 22rem
+}
 @tailwind utilities;
