--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,4 +127,17 @@ a {
   background-color: #f9f9f9;
   border-radius: 7px;
 }
+
+.contact {
+  background: linear-gradient(90deg, #8B5CF6 0%, #EC4899 43.9%);
+  margin: auto;
+  height:   250px;
+  width: 75%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 2rem;
+  padding-right: 2rem
+}
 @tailwind utilities;
