--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
+  background-color: #f9f9f9;
 }
 
 a {
@@ -141,4 +142,3 @@ a {
   padding-right: 2rem
 }
 @tailwind utilities;
-  
